[gd_scene load_steps=14 format=3 uid="uid://d2m2pbepn6rip"]

[ext_resource type="Theme" uid="uid://bqnq26iud8rn3" path="res://common/theme.tres" id="1_gluso"]
[ext_resource type="Script" path="res://ui/start_scene.gd" id="2_27iv5"]
[ext_resource type="StyleBox" uid="uid://0lv825v0nskc" path="res://ui/blue_style_box.tres" id="3_yrlow"]
[ext_resource type="StyleBox" uid="uid://dlbigrenfpyvm" path="res://ui/white_rounded_style_box.tres" id="4_esrti"]
[ext_resource type="PackedScene" uid="uid://dkyrbpxgqqngv" path="res://ui/settings_button.tscn" id="5_2onti"]
[ext_resource type="PackedScene" uid="uid://dcuhgkvouhkiq" path="res://ui/start_scene/cast_carousel.tscn" id="5_rvet4"]
[ext_resource type="PackedScene" uid="uid://b8q1tdpaxtldy" path="res://ui/audible_button.tscn" id="5_sj70n"]
[ext_resource type="PackedScene" uid="uid://dw7300ycojrp7" path="res://ui/start_scene/letter_tile.tscn" id="7_1ls4o"]
[ext_resource type="FontFile" uid="uid://c57ulb1d8v5ug" path="res://common/Rounds Black.otf" id="7_v2dbv"]
[ext_resource type="PackedScene" uid="uid://ebrhp55oc1to" path="res://ui/credits/credits_panel.tscn" id="9_7hjmj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2s8j"]
bg_color = Color(0.133333, 0.305882, 0.65098, 1)
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g8qj6"]
bg_color = Color(0.974321, 0.890568, 0.780752, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.974321, 0.890568, 0.780752, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fq5mx"]
font = ExtResource("7_v2dbv")
font_size = 48
outline_size = 12
outline_color = Color(0.815686, 0.372549, 0.0627451, 1)

[node name="StartScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gluso")
script = ExtResource("2_27iv5")

[node name="BlueBackground" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_yrlow")

[node name="MarginContainer" type="MarginContainer" parent="BlueBackground"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="WhiteBackground" type="PanelContainer" parent="BlueBackground/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_esrti")

[node name="VBoxContainer" type="VBoxContainer" parent="BlueBackground/MarginContainer/WhiteBackground"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="SettingsButton" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/HBoxContainer" instance=ExtResource("5_2onti")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainPanel" type="PanelContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r2s8j")

[node name="VBoxContainer" type="VBoxContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel"]
layout_mode = 2
alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(640, 720)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(640, 720)
render_target_update_mode = 4

[node name="ParallaxBackground" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("5_rvet4")]

[node name="MarginContainer" type="MarginContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24

[node name="LogoContainer" type="VBoxContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/MarginContainer/LogoContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_g8qj6")

[node name="GridContainer" type="HBoxContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/MarginContainer/LogoContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="S" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/MarginContainer/LogoContainer/PanelContainer/GridContainer" instance=ExtResource("7_1ls4o")]
layout_mode = 2
letter = "S"

[node name="T" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/MarginContainer/LogoContainer/PanelContainer/GridContainer" instance=ExtResource("7_1ls4o")]
layout_mode = 2
letter = "T"

[node name="E" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/MarginContainer/LogoContainer/PanelContainer/GridContainer" instance=ExtResource("7_1ls4o")]
layout_mode = 2
letter = "E"

[node name="M" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/MarginContainer/LogoContainer/PanelContainer/GridContainer" instance=ExtResource("7_1ls4o")]
layout_mode = 2
letter = "M"

[node name="Label" type="Label" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/MarginContainer/LogoContainer"]
layout_mode = 2
text = "Career Paths"
label_settings = SubResource("LabelSettings_fq5mx")
horizontal_alignment = 1

[node name="ButtonBox" type="VBoxContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="StartButton" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/ButtonBox" instance=ExtResource("5_sj70n")]
custom_minimum_size = Vector2(550, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "Begin High School!"

[node name="CreditsButton" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/ButtonBox" instance=ExtResource("5_sj70n")]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Credits"

[node name="InfoPageButton" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/ButtonBox" instance=ExtResource("5_sj70n")]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Info Page"

[node name="DebugOptions" type="HBoxContainer" parent="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/ButtonBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="CreditsOverlay" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CreditsOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="CreditsPanel" parent="CreditsOverlay" instance=ExtResource("9_7hjmj")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[connection signal="pressed" from="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/ButtonBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/ButtonBox/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="BlueBackground/MarginContainer/WhiteBackground/VBoxContainer/MarginContainer/MainPanel/VBoxContainer/ButtonBox/InfoPageButton" to="." method="_on_info_page_button_pressed"]
[connection signal="dismissed" from="CreditsOverlay/CreditsPanel" to="." method="_on_credits_panel_dismissed"]
